# mega-bench-reporter

./: .gitignore  Cargo.toml  README.md  TODO.md  repos.toml  rustfmt.toml
.claude/skills/mega-bench-data/: SKILL.md
.claude/skills/provision-instructions-lane/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  toolchain-canary.yml  validate-skills.yml
examples/: parse_profile_dir.rs  render_samples.rs
fixtures/codspeed-canary/: Cargo.toml
fixtures/codspeed-canary/benches/: canary.rs
fixtures/codspeed-canary/src/: lib.rs
scripts/: validate_skills.py
skill/: SKILL.md
skill/references/: alerting.md  cards.md  cli.md  data-layout.md  discovery.md  events.md  lark-card.md  metrics.md  output-contract.md
skill/references/repos/: mega-evm.md
skills/: README.md  registry.json  registry.schema.json
skills/mega-bench-data/: SKILL.md
skills/mega-bench-data/references/: cli.md  data-layout.md  discovery.md  events.md
skills/mega-bench-data/references/repos/: mega-evm.md
skills/provision-instructions-lane/: SKILL.md
src/: cards.rs  charts.rs  compare.rs  config.rs  criterion_results.rs  digest.rs  flamegraph.rs  git.rs  instructions.rs  lane.rs  lib.rs  main.rs  measure.rs  pipeline.rs  state.rs  storage.rs  subprocess.rs
templates/: flamegraph.json  regression_alert.json  trend_digest.json
tests/: measure_cli.rs  synthetic_pipeline.rs
