[package]
name = "mega-bench-reporter"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Continuous benchmark-overhead tracking: bench a repo per commit, compare every subject against a configured baseline, and store raw metrics, charts, and factual events on disk for consuming agents."
publish = false

[[bin]]
name = "mega-bench-reporter"
path = "src/main.rs"

[lib]
name = "mega_bench_reporter"
path = "src/lib.rs"

[dependencies]
# cli
clap = { version = "4", features = ["derive"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# charts
plotters = { version = "0.3", default-features = false, features = ["ab_glyph", "bitmap_backend", "bitmap_encoder", "line_series"] }

# flamegraph
inferno = { version = "0.12", default-features = false, features = ["multithreaded"] }

# misc
anyhow = "1"
rustc-demangle = "0.1"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

[profile.release]
opt-level = 3
lto = "thin"
